# libreverse

./: .gitignore  Makefile.am  README.md  arm-dis.c  configure.ac  dis-asm.h  pull-subtrees.sh  push-subtrees.sh
src/: Makefile.am  asm.h  dl_selector.S  dl_template.S  gotplt.c  gotplt.h  libreverse.h
src/arm/: arm.h
src/asm/: extract-code  insn.h
src/asm/src/x86/: tc-i386.h  x86-dis.c
src/asm/test/: Makefile  bubblesort.c  circle.c
src/lend/: lend.h
src/mm/: slab.c  slab.h
src/reverse/: fmap.c  fmap.h  prints.h  ralloc.c  ralloc.h  reverse.c  reverse.h
src/revwin/: reverse.c
src/x86/: tc-i386.c  x86.h
test/: Makefile  binarysearch.c  conf.xml  cube.c  hash.c  hash.h  queue.c  test.c  test.sh  test1.c  utils.c  utils.h
test/.libs/: lt-test.c.c  test.c_ltshwrapper
